--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,6 +12,11 @@ input {
   margin-bottom: 15px;
 }
 
+textarea {
+  width: 100%;
+  height: 125px;
+  resize: none;
+}
 .message {
   height: 90px;
 }
